fix bug can't toggle sidebar when collapsed, fix content left margin when sidebar is collapsed, add sidebar tooltip when collapsed

--- a/frontend/src/styles/_responsive.scss
+++ b/frontend/src/styles/_responsive.scss
@@ -17,7 +17,12 @@
         transition: margin 0.2s ease-in-out;
     }
     .push-right {
-        margin-left: -235px !important;
+        &.cls {
+            margin-left: -50px !important;
+        }
+        &:not(.cls) {
+            margin-left: -235px !important;
+        }
         .sidebar {
             left: 0px !important;
         }
